# AI-AGENT

./: .env.example  .gitignore  README.md  agent.py  hello_world.py  install-voice.ps1  install.bat  install.ps1  install.sh  listen.py  requirements.txt  tools.py  uninstall.ps1  uninstall.sh  voice.py
.github/workflows/: release.yml
companion/: agent.py  voice.py
rust/: Cargo.toml
rust/src/: agent.rs  app.rs  config.rs  llm.rs  main.rs  provider.rs  tools.rs  ui.rs  voicebridge.rs
tests/: test_agent.py  test_voice.py
voca/: __main__.py  agent.py  config.py  listen.py  provider.py  tools.py  ui.py  voice.py  voice_server.py
